tests/resource/valid/function/allowed_pass.mamba
def f(a: Int) => pass
