tests/resource/invalid/type/function/function_with_stmt_body_ret.mamba
def f(x: Int) -> Int => return print(x)
